--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
         </article>
     </main>
     <footer>
-        Site criado por Miguel para o <a href="#">CursoemVideo</a>.
-        Entre no nosso novo site <a href="https://www.xvideos.com">Clique Aqui</a>
+        Site criado por Miguel para o <a href="#">CursoemVideo</a>
     </footer>
 </body>
 </html>
